contrast colors fix

--- a/styles/place.css
+++ b/styles/place.css
@@ -1,6 +1,6 @@
 /* ---------- COLOR & FONT VARIABLES ---------- */
 :root {
-    --primary-color: #A93226;
+    --primary-color: #9b0c00;
     /* Deep red */
     --secondary-color: #FFFFFF;
     --accent1-color: #27AE60;
@@ -88,7 +88,7 @@ header {
     font-family: var(--heading-font);
     font-size: 1.6rem;
     background-color: var(--accent1-color);
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 0.3rem 1rem;
     border-radius: 4px;
     display: inline-block;
@@ -118,10 +118,12 @@ header {
 /* FOOTER */
 footer {
     background-color: var(--primary-color);
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 1rem;
     text-align: center;
     border-top: 4px solid var(--accent1-color);
+    font-weight: bold;
+    
 }
 
 
